# npool/basetypes/account/v1/enums.pb.go
@@ -20,52 +20,52 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-type ContractType int32
+type ContractOperatorType int32
 
 const (
-	ContractType_DefaultContractType ContractType = 0
-	ContractType_ContractDeployment  ContractType = 10
-	ContractType_ContractCalculate   ContractType = 20
+	ContractOperatorType_DefaultContractOperatorType ContractOperatorType = 0
+	ContractOperatorType_ContractOwner               ContractOperatorType = 10
+	ContractOperatorType_ContractCalculator          ContractOperatorType = 20
 )
 
-// Enum value maps for ContractType.
+// Enum value maps for ContractOperatorType.
 var (
-	ContractType_name = map[int32]string{
-		0:  "DefaultContractType",
-		10: "ContractDeployment",
-		20: "ContractCalculate",
+	ContractOperatorType_name = map[int32]string{
+		0:  "DefaultContractOperatorType",
+		10: "ContractOwner",
+		20: "ContractCalculator",
 	}
-	ContractType_value = map[string]int32{
-		"DefaultContractType": 0,
-		"ContractDeployment":  10,
-		"ContractCalculate":   20,
+	ContractOperatorType_value = map[string]int32{
+		"DefaultContractOperatorType": 0,
+		"ContractOwner":               10,
+		"ContractCalculator":          20,
 	}
 )
 
-func (x ContractType) Enum() *ContractType {
-	p := new(ContractType)
+func (x ContractOperatorType) Enum() *ContractOperatorType {
+	p := new(ContractOperatorType)
 	*p = x
 	return p
 }
 
-func (x ContractType) String() string {
+func (x ContractOperatorType) String() string {
 	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
 }
 
-func (ContractType) Descriptor() protoreflect.EnumDescriptor {
+func (ContractOperatorType) Descriptor() protoreflect.EnumDescriptor {
 	return file_npool_basetypes_account_v1_enums_proto_enumTypes[0].Descriptor()
 }
 
-func (ContractType) Type() protoreflect.EnumType {
+func (ContractOperatorType) Type() protoreflect.EnumType {
 	return &file_npool_basetypes_account_v1_enums_proto_enumTypes[0]
 }
 
-func (x ContractType) Number() protoreflect.EnumNumber {
+func (x ContractOperatorType) Number() protoreflect.EnumNumber {
 	return protoreflect.EnumNumber(x)
 }
 
-// Deprecated: Use ContractType.Descriptor instead.
-func (ContractType) EnumDescriptor() ([]byte, []int) {
+// Deprecated: Use ContractOperatorType.Descriptor instead.
+func (ContractOperatorType) EnumDescriptor() ([]byte, []int) {
 	return file_npool_basetypes_account_v1_enums_proto_rawDescGZIP(), []int{0}
 }
 
@@ -75,17 +75,18 @@ var file_npool_basetypes_account_v1_enums_proto_rawDesc = []byte{
 	0x0a, 0x26, 0x6e, 0x70, 0x6f, 0x6f, 0x6c, 0x2f, 0x62, 0x61, 0x73, 0x65, 0x74, 0x79, 0x70, 0x65,
 	0x73, 0x2f, 0x61, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x2f, 0x76, 0x31, 0x2f, 0x65, 0x6e, 0x75,
 	0x6d, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x14, 0x62, 0x61, 0x73, 0x65, 0x74, 0x79,
-	0x70, 0x65, 0x73, 0x2e, 0x61, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x2e, 0x76, 0x31, 0x2a, 0x56,
-	0x0a, 0x0c, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x61, 0x63, 0x74, 0x54, 0x79, 0x70, 0x65, 0x12, 0x17,
-	0x0a, 0x13, 0x44, 0x65, 0x66, 0x61, 0x75, 0x6c, 0x74, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x61, 0x63,
-	0x74, 0x54, 0x79, 0x70, 0x65, 0x10, 0x00, 0x12, 0x16, 0x0a, 0x12, 0x43, 0x6f, 0x6e, 0x74, 0x72,
-	0x61, 0x63, 0x74, 0x44, 0x65, 0x70, 0x6c, 0x6f, 0x79, 0x6d, 0x65, 0x6e, 0x74, 0x10, 0x0a, 0x12,
-	0x15, 0x0a, 0x11, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x61, 0x63, 0x74, 0x43, 0x61, 0x6c, 0x63, 0x75,
-	0x6c, 0x61, 0x74, 0x65, 0x10, 0x14, 0x42, 0x3d, 0x5a, 0x3b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x4e, 0x70, 0x6f, 0x6f, 0x6c, 0x50, 0x6c, 0x61, 0x74, 0x66, 0x6f,
-	0x72, 0x6d, 0x2f, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2f, 0x6e, 0x70, 0x6f, 0x6f, 0x6c,
-	0x2f, 0x62, 0x61, 0x73, 0x65, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x61, 0x63, 0x63, 0x6f, 0x75,
-	0x6e, 0x74, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x70, 0x65, 0x73, 0x2e, 0x61, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x2e, 0x76, 0x31, 0x2a, 0x62,
+	0x0a, 0x14, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x61, 0x63, 0x74, 0x4f, 0x70, 0x65, 0x72, 0x61, 0x74,
+	0x6f, 0x72, 0x54, 0x79, 0x70, 0x65, 0x12, 0x1f, 0x0a, 0x1b, 0x44, 0x65, 0x66, 0x61, 0x75, 0x6c,
+	0x74, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x61, 0x63, 0x74, 0x4f, 0x70, 0x65, 0x72, 0x61, 0x74, 0x6f,
+	0x72, 0x54, 0x79, 0x70, 0x65, 0x10, 0x00, 0x12, 0x11, 0x0a, 0x0d, 0x43, 0x6f, 0x6e, 0x74, 0x72,
+	0x61, 0x63, 0x74, 0x4f, 0x77, 0x6e, 0x65, 0x72, 0x10, 0x0a, 0x12, 0x16, 0x0a, 0x12, 0x43, 0x6f,
+	0x6e, 0x74, 0x72, 0x61, 0x63, 0x74, 0x43, 0x61, 0x6c, 0x63, 0x75, 0x6c, 0x61, 0x74, 0x6f, 0x72,
+	0x10, 0x14, 0x42, 0x3d, 0x5a, 0x3b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d,
+	0x2f, 0x4e, 0x70, 0x6f, 0x6f, 0x6c, 0x50, 0x6c, 0x61, 0x74, 0x66, 0x6f, 0x72, 0x6d, 0x2f, 0x6d,
+	0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2f, 0x6e, 0x70, 0x6f, 0x6f, 0x6c, 0x2f, 0x62, 0x61, 0x73,
+	0x65, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x61, 0x63, 0x63, 0x6f, 0x75, 0x6e, 0x74, 0x2f, 0x76,
+	0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -102,7 +103,7 @@ func file_npool_basetypes_account_v1_enums_proto_rawDescGZIP() []byte {
 
 var file_npool_basetypes_account_v1_enums_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
 var file_npool_basetypes_account_v1_enums_proto_goTypes = []interface{}{
-	(ContractType)(0), // 0: basetypes.account.v1.ContractType
+	(ContractOperatorType)(0), // 0: basetypes.account.v1.ContractOperatorType
 }
 var file_npool_basetypes_account_v1_enums_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
